--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.5.3",
     "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2"
   }
